syntax = "proto3";
package stats.service.analyzer;

option java_multiple_files = true;
option java_package = "ru.practicum.evm.stats.proto";

message UserPredictionsRequestProto {
  int32 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int32 event_id = 1;
  int32 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int32 event_id = 1;
}

message RecommendedEventProto {
  int32 event_id = 1;
  float score = 2;
}